--- a/DiamondStoreRepository/DiamondStoreRepository.csproj
+++ b/DiamondStoreRepository/DiamondStoreRepository.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DiamondDAO\DiamondDAO.csproj" />
+  </ItemGroup>
+
 </Project>
