--- a/DiamondStoreService/DiamondStoreService.csproj
+++ b/DiamondStoreService/DiamondStoreService.csproj
@@ -10,4 +10,12 @@
     <ProjectReference Include="..\DiamondStoreRepository\DiamondStoreRepository.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Utils\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+  </ItemGroup>
+
 </Project>
