View, paging, sort, filter all diamond

--- a/DiamondStore/appsettings.json
+++ b/DiamondStore/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DatabaseConnection": "Server=(local);uid=sa;pwd=12345;database=DiamondStore;TrustServerCertificate=True;"
+    "DatabaseConnection": "Server=(local);uid=sa;pwd=Abcd1234;database=DiamondStore;TrustServerCertificate=True;"
   }
 }
