add google login function

--- a/DiamondStore/appsettings.json
+++ b/DiamondStore/appsettings.json
@@ -8,5 +8,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DatabaseConnection": "Server=(local);uid=sa;pwd=12345;database=DiamondStore;TrustServerCertificate=True;"
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId1": "733494164563-c9balchn6",
+      "ClientId2": "oit4n4odovqjvi0fhr5ouor.apps.googleusercontent.com",
+      "ClientSecret1": "GOCSPX-TWgFr1AY",
+      "ClientSecret2": "mKxjxQu8N8RBe-XiQSGu"
+    }
   }
 }
