add firebase service

--- a/DiamondStore/appsettings.json
+++ b/DiamondStore/appsettings.json
@@ -6,6 +6,13 @@
     }
   },
   "AllowedHosts": "*",
+  "Firebase": {
+    "ProjectId1": "milk-st",
+    "ProjectId2": "ore-ce677",
+    "StorageBucket1": "milk-store-",
+    "StorageBucket2": "ce677.appspot.com",
+    "CredentialsPath": "firebase-adminsdk.json"
+  },
   "ConnectionStrings": {
     "DatabaseConnection": "Server=(local);uid=sa;pwd=12345;database=DiamondStore;TrustServerCertificate=True;"
   },
