--- a/DiamondStore/appsettings.json
+++ b/DiamondStore/appsettings.json
@@ -14,7 +14,7 @@
     "CredentialsPath": "firebase-adminsdk.json"
   },
   "ConnectionStrings": {
-    "DatabaseConnection": "Server=(local);uid=sa;pwd=12345;database=DiamondStore;TrustServerCertificate=True;"
+    "DatabaseConnection": "Server=(local);uid=sa;pwd=Abcd1234;database=DiamondStore;TrustServerCertificate=True;"
   },
   "Authentication": {
     "Google": {
