--- a/DiamondStoreRepository/DiamondStoreRepository.csproj
+++ b/DiamondStoreRepository/DiamondStoreRepository.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DiamondDAO\DiamondDAO.csproj" />
+    <ProjectReference Include="..\DiamondBusinessObject\DiamondBusinessObject.csproj" />
   </ItemGroup>
 
 </Project>
